update tot Lorom ipsum Opdrachten

--- a/Labo_8/index.html
+++ b/Labo_8/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Opdracht 1-Opdracht 2-pdracht 3-pdracht 4-pdracht 5</title>
+    <title>Opdracht 1-Opdracht 2-Opdracht 3-Opdracht 4-Opdracht 5 - Opdrachten Lorem ipsum</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -35,8 +35,7 @@
             zonder witruimte word alles aan elkaar geplakt
         </p>
         <p>
-            &lt;div class="area"&gt;01&lt;/div&gt;
-            &lt;div class="area"&gt;02&lt;/div&gt;
+            &lt;div class="area"&gt;01&lt;/div&gt;&lt;div class="area"&gt;02&lt;/div&gt;
         </p>
         <p>
             als je de elementen geen white space geeft zal hij het aan elkaar plakken als:
@@ -111,10 +110,151 @@
         </p>
     </section>
 
-    <section>
+    <section class="opdracht4">
         <h2>Opdracht 4</h2>
+        <div class="area">01</div>
+        <div class="area tall">02</div>
+        <div class="area">03</div>
+        <div class="area short">04</div>
+        <div class="area">05</div>
+        een twee drie vier vijf zes zeven acht negen tien elf twaalf dertien veertien vijftien zestien zeventien
+        achttien
+        negentien twintig
+        <div class="area tall">06</div>
+        <div class="area">07</div>
+        <div class="area short2">08</div>
+        <div class="area floaty">09</div>
+        <div class="area tall">10</div>
+        <div class="area">11</div>
+        een twee drie vier vijf zes zeven acht negen tien elf twaalf dertien veertien vijftien zestien zeventien
+        achttien
+        negentien twintig
+        <div class="area floaty">12</div>
+        <div class="area">13</div>
+        <div class="area floaty">14</div>
+        <div class="area">15</div>
+        <div class="area short">16</div>
+        een twee drie vier vijf zes zeven acht negen tien elf twaalf dertien veertien vijftien zestien zeventien
+        achttien
+        negentien twintig
+        <div class="area break">17</div>
+        <div class="area tall">18</div>
+        <div class="area">19</div>
+        <div class="area short">20</div>
     </section>
 
+    <section class="opdracht5">
+        <h2>Opdracht 5</h2>
+        <div class="area2 floaty2">01</div>
+        <div class="area2 floaty2">02</div>
+        <div class="area2 floaty2">03</div>
+        <div class="area2 floaty2">04</div>
+        <div class="area2 floaty2">05</div>
+        <div class="area2 floaty2">06</div>
+        <div class="area2 floaty2">07</div>
+        <div class="area2 floaty2">08</div>
+        <div class="area2 floaty2 tall2">09</div>
+        <div class="area2 floaty2">10</div>
+        <div class="area2 floaty2">11</div>
+        <div class="area2 floaty2">12</div>
+        <div class="area2 break2">13</div>
+        <div class="area2 floaty2">14</div>
+        <div class="area2 floaty2">15</div>
+        <div class="area2 floaty2">16</div>
+        <div class="area2 floaty2">17</div>
+        <div class="area2 floaty2">18</div>
+        <div class="area2 floaty2">19</div>
+        <div class="area2 floaty2">20</div>
+    </section>
+
+    <section class="titleloremipsum">
+        <h2>Opdracht Lorem ipsum</h2>
+        <div class="loremipsum">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed consequat felis. Cras bibendum tortor
+                at orci vehicula, posuere venenatis odio pellentesque. Quisque magna mauris, ullamcorper ut augue at,
+                rhoncus pretium eros. Nam sapien odio, tincidunt sit amet efficitur at, eleifend quis ipsum. Vivamus ac
+                risus justo. Aenean egestas massa id enim vehicula, at euismod nisi venenatis. Sed sed consectetur eros.
+                Praesent lobortis laoreet odio, ac scelerisque sem vehicula nec. Fusce id sollicitudin felis. Duis
+                placerat eleifend dolor, et mollis quam. Quisque in lacinia nibh, eu fringilla diam. Ut tempor elit a
+                nibh hendrerit tincidunt non quis nibh. Aliquam lobortis volutpat neque, sit amet sodales mauris
+                ultrices quis. Maecenas mauris tortor, sagittis sed neque id, porta ultricies magna. Vivamus commodo
+                tempus diam, vitae varius massa euismod a.
+            </p>
+            <p>
+                Nam eleifend luctus nisl, eget vehicula nisi lacinia id. Etiam congue nisl vel lorem dignissim, nec
+                pellentesque nunc scelerisque. Nullam consequat convallis mi non volutpat. Fusce ut vulputate orci. Duis
+                pharetra felis sed turpis iaculis, vel vehicula orci congue. Cras hendrerit lacus ut volutpat commodo.
+                Etiam vulputate, mi eget dignissim malesuada, velit nisl dictum erat, sed blandit lectus odio in magna.
+                Proin blandit facilisis mollis. Suspendisse vel justo elit. Fusce eget ex sed quam porttitor tristique.
+                Nullam interdum tortor cursus vehicula viverra. Fusce mattis sodales urna, at lobortis quam semper eu.
+                Donec dictum, odio sed luctus interdum, felis est interdum nisi, in varius nisl metus vel odio. Nullam
+                luctus ut tortor ut sollicitudin. Mauris placerat felis commodo massa convallis, et finibus nunc
+                vulputate.
+            </p>
+        </div>
+        <div>
+            <p>
+                Je zult merken dat de kolommen niet naast elkaar, maar onder elkaar staan. Waarom is dit zo? <br>
+                Wanneer je 'width: 50%;' gebruikt, probeert elk element 50% van de beschikbare breedte in te nemen, maar
+                de toegevoegde padding, borders en marges vergroten deze breedte. Als de som van deze breedtes meer dan
+                100% wordt, passen de elementen niet naast elkaar en worden ze naar de volgende regel verplaatst vanwege
+                het box model berekening.
+            </p>
+            <p>
+                In CSS3 is er een betere mogelijkheid: zoek op het internet naar de 'box-sizing' property en probeer
+                hiermee een goede oplossing te bekomen waarbij de width van elke kolom netjes op 50% is
+                ingesteld. <br>
+                Met 'box-sizing: border-box;' zullen de padding en de border worden opgenomen in de opgegeven breedte
+                van elk element. Hierdoor zullen de kolommen, ondanks de padding en border, netjes naast elkaar passen
+                met elk 50% breedte binnen de flex container.
+            </p>
+        </div>
+    </section>
+
+    <section>
+        <h2>Opdracht Lorem ipsum extra space</h2>
+        <div class="loremipsum2">
+            <div class="loremipsumcolumn">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed consequat felis. Cras bibendum
+                    tortor
+                    at orci vehicula, posuere venenatis odio pellentesque. Quisque magna mauris, ullamcorper ut augue
+                    at,
+                    rhoncus pretium eros. Nam sapien odio, tincidunt sit amet efficitur at, eleifend quis ipsum. Vivamus
+                    ac
+                    risus justo. Aenean egestas massa id enim vehicula, at euismod nisi venenatis. Sed sed consectetur
+                    eros.
+                    Praesent lobortis laoreet odio, ac scelerisque sem vehicula nec. Fusce id sollicitudin felis. Duis
+                    placerat eleifend dolor, et mollis quam. Quisque in lacinia nibh, eu fringilla diam. Ut tempor elit
+                    a
+                    nibh hendrerit tincidunt non quis nibh. Aliquam lobortis volutpat neque, sit amet sodales mauris
+                    ultrices quis. Maecenas mauris tortor, sagittis sed neque id, porta ultricies magna. Vivamus commodo
+                    tempus diam, vitae varius massa euismod a.
+                </p>
+            </div>
+            <div class="loremipsumcolumn">
+                <p>
+                    Nam eleifend luctus nisl, eget vehicula nisi lacinia id. Etiam congue nisl vel lorem dignissim, nec
+                    pellentesque nunc scelerisque. Nullam consequat convallis mi non volutpat. Fusce ut vulputate orci.
+                    Duis
+                    pharetra felis sed turpis iaculis, vel vehicula orci congue. Cras hendrerit lacus ut volutpat
+                    commodo.
+                    Etiam vulputate, mi eget dignissim malesuada, velit nisl dictum erat, sed blandit lectus odio in
+                    magna.
+                    Proin blandit facilisis mollis. Suspendisse vel justo elit. Fusce eget ex sed quam porttitor
+                    tristique.
+                    Nullam interdum tortor cursus vehicula viverra. Fusce mattis sodales urna, at lobortis quam semper
+                    eu.
+                    Donec dictum, odio sed luctus interdum, felis est interdum nisi, in varius nisl metus vel odio.
+                    Nullam
+                    luctus ut tortor ut sollicitudin. Mauris placerat felis commodo massa convallis, et finibus nunc
+                    vulputate.
+                </p>
+            </div>
+        </div>
+    </section>
+    <h2></h2>
 </main>
 
 <footer>
