--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="Labo_8/index.html">Opdracht 1 - Opdracht 2 - Opdracht 3 - Opdracht 4 - Opdracht 5</a>
+                        <a href="Labo_8/index.html">Opdracht 1 - Opdracht 2 - Opdracht 3 - Opdracht 4 - Opdracht 5 - Opdrachten Lorem ipsum</a>
                     </li>
                 </ul>
             </nav>
