--- a/Labo_8/index.html
+++ b/Labo_8/index.html
@@ -8,7 +8,7 @@
 <body>
 <main>
     <header>
-        <h1>Opdracht 1 - Opdracht 2 - Opdracht 3 - Opdracht 4 - Opdracht 5</h1>
+        <h1>Opdracht 1 - Opdracht 2 - Opdracht 3 - Opdracht 4 - Opdracht 5 - Opdrachten Lorem ipsum</h1>
     </header>
 
     <section>
