--- a/Labo_8/Opdracht_Cocktailbar/index.html
+++ b/Labo_8/Opdracht_Cocktailbar/index.html
@@ -124,6 +124,8 @@
     &copy; 2015, Cocktail Bar<br/>
     All trademarks and registered trademarks appearing on this site are
     the property of their respective owners.
+    <br>
+    <a href="/webdevelepment/index.html">terug naar home pagina</a>
 </footer>
 
 </body>
