--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                     <li>
                         <a href="Labo_8/index.html">Opdracht 1 - Opdracht 2 - Opdracht 3 - Opdracht 4 - Opdracht 5 - Opdrachten Lorem ipsum</a>
                     </li>
+                    <li>
+                        <a href="Labo_8/Opdracht_Cocktailbar/index.html">Opdracht Cocktailbar</a>
+                    </li>
                 </ul>
             </nav>
         </section>
