--- a/index.html
+++ b/index.html
@@ -155,6 +155,20 @@
                 </ul>
             </nav>
         </section>
+
+    <section class="labo9">
+        <h2>Labo 9</h2>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Labo_9/OpdrachtPositionerenVanImages/index.html">OpdrachtPositionerenVanImages</a>
+                </li>
+                <li>
+                    <a href="Labo_9/OpdrachtAirbus/airbus.html">Opdracht Airbus</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
     </div>
 </main>
 
