--- a/Labo_9/OpdrachtPositionerenVanImages/index.html
+++ b/Labo_9/OpdrachtPositionerenVanImages/index.html
@@ -33,5 +33,9 @@
     </article>
 </main>
 
+<footer>
+    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+</footer>
+
 </body>
 </html>
