--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="Labo_8/index.html">Opdracht 1 - Opdracht 2 - Opdracht 3 - Opdracht 4 - Opdracht 5 - Opdrachten Lorem ipsum</a>
+                        <a href="Labo_8/index.html">Opdracht 1 - Opdracht 2 - Opdracht 3 - Opdracht 4 - Opdracht 5 -
+                            Opdrachten Lorem ipsum</a>
                     </li>
                     <li>
                         <a href="Labo_8/Opdracht_Cocktailbar/index.html">Opdracht Cocktailbar</a>
@@ -156,19 +157,33 @@
             </nav>
         </section>
 
-    <section class="labo9">
-        <h2>Labo 9</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Labo_9/OpdrachtPositionerenVanImages/index.html">OpdrachtPositionerenVanImages</a>
-                </li>
-                <li>
-                    <a href="Labo_9/OpdrachtAirbus/airbus.html">Opdracht Airbus</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
+        <section class="labo9">
+            <h2>Labo 9</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_9/OpdrachtPositionerenVanImages/index.html">OpdrachtPositionerenVanImages</a>
+                    </li>
+                    <li>
+                        <a href="Labo_9/OpdrachtAirbus/airbus.html">Opdracht Airbus</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+
+        <section class="labo9">
+            <h2>Labo 9</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_10/Begin_situatie_mediaQueries/oef1.html">Begin situatie mediaQueries</a>
+                    </li>
+                    <li>
+                        <a href="Labo_10/Beginsituatie_bootstrap5">Beginsituatie bootstrap5</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
