--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
                     <li>
                         <a href="Labo_10/Beginsituatie_bootstrap5">Beginsituatie bootstrap5</a>
                     </li>
+                    <li>
+                        <a href="Labo_10/Personal_Homepage/index.html">Personal Homepage</a>
+                    </li>
                 </ul>
             </nav>
         </section>
