personal homepage bootstrap toegevoegd

--- a/Labo_10/Personal_Homepage/index.html
+++ b/Labo_10/Personal_Homepage/index.html
@@ -16,7 +16,7 @@
             <div class="col-lg-4"></div>
             <div class="col-lg-2 col-md-12"><img src="images/Male-example.png" alt="Profile Foto"></div>
 
-            <div class="col-lg-2 col-md-12">
+            <div class="col-lg-4 col-md-12">
                 <ul>
                     <li><strong>Volledige naam:</strong> Rieuwert Tjeerdsma</li>
                     <li><strong>Adres:</strong> Luchthavenlaan, 199, 2400, Mol</li>
@@ -25,52 +25,52 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-4"></div>
+            <div class="col-lg-2"></div>
         </div>
     </section>
 
     <!-- Hobbies -->
     <section class="hobbies">
         <h1>Hobbies</h1>
-        <div class="container">
-            <ol>
-                <li>
-                    <p>Gamen: Ik game veel meestal op playstation met spellen zoals Destiny 2.</p>
-                    <a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a>
-                </li>
-                <li>
-                    <p>Computer: Werk graag met de computer en vindt het tof om in elkaar te steken</p>
-                    <a href="https://www.portaventuraworld.com/en">Computer samenstellen</a>
-                </li>
-                <li>
-                    <p>Reizen/Pretparken: Ik ga graag op reis voorall om pretparken te doen in andere landen mijn
-                        favoriet
-                        PortAventura World Spanje</p>
-                    <a href="https://www.portaventuraworld.com/en">PortAventura World</a>
-                </li>
-            </ol>
+        <div class="row">
+            <div class="col-lg-4 col-md-12">
+                <p>Gamen: Ik game veel meestal op playstation met spellen zoals Destiny 2.</p>
+                <a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a>
+            </div>
+
+            <div class="col-lg-4 col-md-12">
+                <p>Computer: Werk graag met de computer en vindt het tof om in elkaar te steken</p>
+                <a href="https://www.portaventuraworld.com/en">Computer samenstellen</a>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <p>Reizen/Pretparken: Ik ga graag op reis voorall om pretparken te doen in andere landen mijn
+                    favoriet
+                    PortAventura World Spanje</p>
+                <a href="https://www.portaventuraworld.com/en">PortAventura World</a>
+            </div>
         </div>
+
     </section>
 
     <!-- Likes -->
     <section class="likes">
         <h1>Vind ik leuks</h1>
-        <ol>
-            <li>
-                <p>Muziek met genre bighroom, hardstyle, techno,...</p>
+        <div class="row">
+            <div class="col-lg-4 col-md-12">
+                <h3>Muziek met genre bighroom, hardstyle, techno,...</h3>
                 <a class="imagelink" href="https://open.spotify.com/"><img src="images/Spotify-Logo.png" alt="Spotify"></a>
-            </li>
-            <li>
-                <p>The Great Wall</p>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <h3>The Great Wall</h3>
                 <a href="https://www.imdb.com/title/tt2034800/"><img src="images/The-great-wall.jpg"
                                                                      alt="The Great Wall movie"></a>
-            </li>
-            <li>
-                <p>Avengers Endgame</p>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <h3>Avengers Endgame</h3>
                 <a href="https://www.imdb.com/title/tt4154796/"><img src="images/Avengers-Endgame.jpg"
                                                                      alt="Avengers Endgame"></a>
-            </li>
-        </ol>
+            </div>
+        </div>
     </section>
 
     <!-- Prognose table -->
