--- a/Labo_10/Begin_situatie_mediaQueries/oef1.html
+++ b/Labo_10/Begin_situatie_mediaQueries/oef1.html
@@ -20,6 +20,7 @@
 	<h2>Box Columns</h2>
 
 	<section class="kittens">
+		<h2>kittens</h2>
 		<figure>
 			<img src="images/cat.jpg" alt="kitten">
 			<figcaption>Place Kittens are great</figcaption>
