--- a/Labo_10/Beginsituatie_bootstrap5/index.htm
+++ b/Labo_10/Beginsituatie_bootstrap5/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=”nl”>
+<html lang="nl">
 <head>
     <title>Bootstrap 5 </title>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 
 
     <!-- Eigen style -->
-    <link href="style/style.css" rel="stylesheet"/>
+    <link href="style/style.css" rel="stylesheet">
 </head>
 
 <body>
