--- a/Labo_2/Opdracht10.html
+++ b/Labo_2/Opdracht10.html
@@ -57,6 +57,6 @@
     <li>vier</li>
 </ul>
 
-    <a href="/webdevelepment/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
