--- a/Labo_2/Opdracht3.html
+++ b/Labo_2/Opdracht3.html
@@ -11,6 +11,6 @@
 
     <p>U kunt met file:// protocol het document openen in Windows Verkenner en in de browser url ziet het pad van het document, en met  http:// protocol wordt het bestand geopend lokaal in webstorm</p>
 
-    <a href="/webdevelepment/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
