--- a/Labo_2/Opdracht4.html
+++ b/Labo_2/Opdracht4.html
@@ -11,6 +11,6 @@
     lege
     tekens,<br> nieuwe regel en &nbsp; &nbsp; &nbsp; &nbsp; extra spaties</p>
 
-    <a href="/webdevelepment/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
