--- a/Labo_2/Opdracht5.html
+++ b/Labo_2/Opdracht5.html
@@ -11,6 +11,6 @@
         </i>
     </p>
 
-    <a href="/webdevelepment/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
