--- a/Labo_2/Opdracht6.html
+++ b/Labo_2/Opdracht6.html
@@ -13,6 +13,6 @@
         Deze zijn verkeert genest omdat de positie van de haakjes verkeerd staan het correcte is dit (4x(2+2))
     </p>
 
-    <a href="/webdevelepment/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
