--- a/Labo_2/Opdracht7.html
+++ b/Labo_2/Opdracht7.html
@@ -23,6 +23,6 @@
         </li>
     </ol>
 
-    <a href="/webdevelepment/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
