--- a/Labo_3/Contact-Information-Assignment/index.html
+++ b/Labo_3/Contact-Information-Assignment/index.html
@@ -78,7 +78,7 @@
     </table>
 </section>
 <footer>
-    <a href="/webdevelepment/index.html">back to home page</a>
+    <a href="../../index.html">back to home page</a>
 </footer>
 </body>
 </html>
