--- a/Labo_3/Onderwijs-aanbod/index.html
+++ b/Labo_3/Onderwijs-aanbod/index.html
@@ -75,7 +75,7 @@
 
 <footer>
     <p>&copy; 2024</p>
-    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+    <a href="../../index.html">terug naar home pagina</a>
 </footer>
 </body>
 </html>
