--- a/Labo_3/Uitbreiding-personal-homepage/index.html
+++ b/Labo_3/Uitbreiding-personal-homepage/index.html
@@ -130,7 +130,7 @@
 </main>
 
 <footer>
-    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+    <a href="../../index.html">terug naar home pagina</a>
 </footer>
 </body>
 </html>
