--- a/Labo_4/likes.html
+++ b/Labo_4/likes.html
@@ -30,7 +30,7 @@
 </main>
 
 <footer>
-    <a href="/webdevelepment/Labo_4/index.html">terug naar vorige pagina</a>
+    <a href="../Labo_4/index.html">terug naar vorige pagina</a>
 </footer>
 </body>
 </html>
