--- a/Labo_7/Opdracht_2/index.html
+++ b/Labo_7/Opdracht_2/index.html
@@ -75,7 +75,7 @@
 </section>
 
 <footer>
-    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+    <a href="../../index.html">terug naar home pagina</a>
 </footer>
 </body>
 </html>
