--- a/Labo_2/Opdracht9.html
+++ b/Labo_2/Opdracht9.html
@@ -14,6 +14,6 @@
 
     <p><a href="http://www.htmldog.com/examples/"><img src="http://www.htmldog.com/badge1.gif" alt="HTML Dog Website"></a></p>
 
-    <a href="/webdevelepment/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
