--- a/Labo_4/hobby's.html
+++ b/Labo_4/hobby's.html
@@ -28,7 +28,7 @@
 </main>
 
 <footer>
-    <a href="/webdevelepment/Labo_4/index.html">terug naar vorige pagina</a>
+    <a href="../Labo_4/index.html">terug naar vorige pagina</a>
 </footer>
 </body>
 </html>
