--- a/Labo_7/Opdracht_3/index.html
+++ b/Labo_7/Opdracht_3/index.html
@@ -49,7 +49,7 @@
 </section>
 
 <footer>
-    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+    <a href="../../index.html">terug naar home pagina</a>
 </footer>
 </body>
 </html>
