--- a/Labo_8/Opdracht_Cocktailbar/index.html
+++ b/Labo_8/Opdracht_Cocktailbar/index.html
@@ -125,7 +125,7 @@
     All trademarks and registered trademarks appearing on this site are
     the property of their respective owners.
     <br>
-    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+    <a href="../../index.html">terug naar home pagina</a>
 </footer>
 
 </body>
