--- a/Labo_9/OpdrachtPositionerenVanImages/index.html
+++ b/Labo_9/OpdrachtPositionerenVanImages/index.html
@@ -34,7 +34,7 @@
 </main>
 
 <footer>
-    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+    <a href="../../index.html">terug naar home pagina</a>
 </footer>
 
 </body>
