--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             </nav>
         </section>
 
-        <section class="labo9">
-            <h2>Labo 9</h2>
+        <section class="labo10">
+            <h2>Labo 10</h2>
             <nav>
                 <ul>
                     <li>
@@ -183,6 +183,20 @@
                     </li>
                     <li>
                         <a href="Labo_10/Personal_Homepage/index.html">Personal Homepage</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+
+        <section class="labo11">
+            <h2>Labo 11</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_11/Grid%20Exercises/index.html">Grid Opdrachten</a>
+                    </li>
+                    <li>
+                        <a href="Labo_11/Beginsituatie/index.html">Beginsituatie</a>
                     </li>
                 </ul>
             </nav>
