--- a/index.html
+++ b/index.html
@@ -201,6 +201,23 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="labo11">
+            <h2>Labo 11</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_12/BeginSituatieOef1/index.html">Oefening 1</a>
+                    </li>
+                    <li>
+                        <a href="Labo_12/BeginSituatieOef2/index.html">Oefening 2</a>
+                    </li>
+                    <li>
+                        <a href="Labo_12/frontendmentorprofilecardBeginSituatie/index.html">Oefening 3</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
