--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <a href="Labo_12/BeginSituatieOef2/index.html">Oefening 2</a>
                     </li>
                     <li>
-                        <a href="Labo_12/frontendmentorprofilecardBeginSituatie/index.html">Oefening 3</a>
+                        <a href="Labo_12/Oef3/index.html">Oefening 3</a>
                     </li>
                 </ul>
             </nav>
