--- a/index.html
+++ b/index.html
@@ -218,6 +218,20 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="extra_oefening">
+            <h2>Extra Oefening</h2>
+            <nav>
+                <ul>
+                    <li>
+                    <a href="HerhalingsOefeningen/eindoefeningBeginSituatie(2)/eindoefeningBeginSituatie/index.html">Oefening 1</a>
+                    </li>
+                    <li>
+                        <a href="HerhalingsOefeningen/BeginSituatie_Kitchn/BeginSituatie_Kitchn/start.html">Kitchn</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
