--- a/index.html
+++ b/index.html
@@ -232,6 +232,24 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="Semester2">
+            <h2>Semester 2</h2>
+        </section>
+
+        <section class="Labo 13">
+            <h2>Labo 13</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_13/leeg%20project/index.html">Leeg Project</a>
+                    </li>
+                    <li>
+                        <a href="Labo_13/demo%20rekenmasjien/index.html">Demo Rekenmachine</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
