--- a/index.html
+++ b/index.html
@@ -250,6 +250,29 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="Labo 14">
+            <h2>Labo 13</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_14/Arrays/index.html">Arrays</a>
+                    </li>
+                    <li>
+                        <a href="Labo_14/Opdracht%201">Opdracht 1</a>
+                    </li>
+                    <li>
+                        <a href="Labo_14/Opdracht%203-4-5">Opdracht 4-5</a>
+                    </li>
+                    <li>
+                        <a href="Labo_14/Opdracht%206-Kopieer">Opdracht 6 Kopieer</a>
+                    </li>
+                    <li>
+                        <a href="Labo_14/Opdracht%201">Substring</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
