--- a/index.html
+++ b/index.html
@@ -259,16 +259,16 @@
                         <a href="Labo_14/Arrays/index.html">Arrays</a>
                     </li>
                     <li>
-                        <a href="Labo_14/Opdracht%201">Opdracht 1</a>
+                        <a href="Labo_14/Opdracht%201/index.html">Opdracht 1</a>
                     </li>
                     <li>
-                        <a href="Labo_14/Opdracht%203-4-5">Opdracht 4-5</a>
+                        <a href="Labo_14/Opdracht%203-4-5/index.html">Opdracht 3-4-5</a>
                     </li>
                     <li>
-                        <a href="Labo_14/Opdracht%206-Kopieer">Opdracht 6 Kopieer</a>
+                        <a href="Labo_14/Opdracht%206-Kopieer/index.html">Opdracht 6 Kopieer</a>
                     </li>
                     <li>
-                        <a href="Labo_14/Opdracht%201">Substring</a>
+                        <a href="Labo_14/Substring/index.html">Substring</a>
                     </li>
                 </ul>
             </nav>
