--- a/index.html
+++ b/index.html
@@ -273,6 +273,25 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="Labo 15">
+            <h2>Labo 15</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_15/Paragrafen/index.html">Paragrafen</a>
+                    </li>
+
+                    <li>
+                        <a href="Labo_15/Color%20picker/index.html">Color Picker</a>
+                    </li>
+
+                    <li>
+                        <a href="Labo_15/Producten/index.html">Producten</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
