--- a/Labo_15/Producten/index.html
+++ b/Labo_15/Producten/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-<table border="1">
+<main>
+    <table>
     <thead>
     <tr>
         <th>Product</th>
@@ -45,9 +46,11 @@
     </tr>
     </tbody>
 </table>
+</main>
+
+
 
 <button onclick="herbereken()">Herbereken</button>
-
-<script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
+<script src="scripts/code.js"></script>
 </body>
 </html>
