--- a/Labo_15/Paragrafen/index.html
+++ b/Labo_15/Paragrafen/index.html
@@ -36,6 +36,6 @@
 
 </main>
 
-<script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
+<script src="scripts/code.js"></script>
 </body>
 </html>
