--- a/index.html
+++ b/index.html
@@ -292,6 +292,23 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="Labo 16">
+            <h2>Labo 16</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_16/OpdrachtFormulierElementen/index.html">Opdracht Formulier Elementen</a>
+                    </li>
+
+                    <li>
+                        <a href="Labo_16/SpatiesOpConsole/index.html">Spaties Op Console</a>
+                    </li>
+                        <a href="Labo_16/ManVanAn/index.html">Man Van An</a>
+                    <li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
