--- a/Labo_17/Gemeenten/index.html
+++ b/Labo_17/Gemeenten/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Title</title>
+    <title>Gemeenten</title>
 </head>
 <body>
+
+    <main>
+        <label for="gemeenten">Gemeenten</label>
+        <select id="gemeenten" name="gemeenten" size="1">
+
+        </select>
+    </main>
 
 <script src="scripts/code.js"></script>
 </body>
