--- a/index.html
+++ b/index.html
@@ -309,6 +309,29 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="Labo 17">
+            <h2>Labo 17</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_17/Trigrams/index.html">Trigrams</a>
+                    </li>
+                    <li>
+                        <a href="Labo_17/de%20en%20het/index.html">De En Het</a>
+                    </li>
+                    <li>
+                        <a href="Labo_17/Gemeenten/index.html">Gemeenten</a>
+                    </li>
+                    <li>
+                        <a href="Labo_17/Formwaarden/index.html">Formwaarden</a>
+                    <li>
+                    <li>
+                        <a href="Labo_17/Formvalidatie/index.html">Form Validatie</a>
+                    <li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
