--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         <a href="Labo_17/Trigrams/index.html">Trigrams</a>
                     </li>
                     <li>
-                        <a href="Labo_17/de%20en%20het/index.html">De En Het</a>
+                        <a href="Labo_17/De%20en%20het/index.html">De En Het</a>
                     </li>
                     <li>
                         <a href="Labo_17/Gemeenten/index.html">Gemeenten</a>
