--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
             <nav>
                 <ul>
                     <li>
-                    <a href="HerhalingsOefeningen/eindoefeningBeginSituatie(2)/eindoefeningBeginSituatie/index.html">Oefening 1</a>
+                        <a href="HerhalingsOefeningen/eindoefeningBeginSituatie(2)/eindoefeningBeginSituatie/index.html">Oefening
+                            1</a>
                     </li>
                     <li>
                         <a href="HerhalingsOefeningen/BeginSituatie_Kitchn/BeginSituatie_Kitchn/start.html">Kitchn</a>
@@ -330,6 +331,23 @@
                     <li>
                         <a href="Labo_17/Formvalidatie/index.html">Form Validatie</a>
                     <li>
+                </ul>
+            </nav>
+        </section>
+
+        <section class="Labo 18">
+            <h2>Labo 18</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_18/Opdracht%201/index.html">Opdracht 1</a>
+                    </li>
+                    <li>
+                        <a href="Labo_18/demo%20events/demo%20events/index.html">Demo Events</a>
+                    </li>
+                    <li>
+                        <a href="Labo_18/Color%20picker/index.html">Color picker</a>
+                    </li>
                 </ul>
             </nav>
         </section>
