--- a/index.html
+++ b/index.html
@@ -351,6 +351,17 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="Labo 19">
+            <h2>Labo 19</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_19/BeginSituatie_HitAnObject/index.html">Hit on object</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
