--- a/index.html
+++ b/index.html
@@ -362,6 +362,25 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="Labo 20">
+        <h2>Labo 20</h2>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Labo_20/mijn%20geboortedatum/index.html">Hoe oud ben ik</a>
+                </li>
+
+                <li>
+                    <a href="Labo_20/JSON/index.html">JSON opdracht</a>
+                </li>
+
+                <li>
+                    <a href="Labo_20/start%20contact%20manager%20opdracht/index.html">Contact manager</a>
+                </li>
+            </ul>
+        </nav>
+        </section>
     </div>
 </main>
 
