--- a/Labo_21/Color picker/index.html
+++ b/Labo_21/Color picker/index.html
@@ -9,13 +9,19 @@
     <h2>Color Picker</h2>
     <div class="ColorPicker">
         <div class="slider-container">
-            <p id="redPara">0<input type="range" id="redSlider" class="slider" value="255" min="0" max="255">255 &nbsp; Rood
+            <label for="redSlider"></label>
+            <p id="redPara">0<input type="range" id="redSlider" class="slider" value="255" min="0" max="255">255 &nbsp;
+                Rood
                 <span
                         id="redValue">50</span></p>
-            <p id="greenPara">0<input type="range" id="greenSlider" class="slider" value="0" min="0" max="255">255 &nbsp; Groen
+            <label for="greenSlider"></label>
+            <p id="greenPara">0<input type="range" id="greenSlider" class="slider" value="0" min="0" max="255">255
+                &nbsp; Groen
                 <span
                         id="greenValue">50</span></p>
-            <p id="bluePara">0<input type="range" id="blueSlider" class="slider" value="0" min="0" max="255">255 &nbsp; Blauw
+            <label for="blueSlider"></label>
+            <p id="bluePara">0<input type="range" id="blueSlider" class="slider" value="0" min="0" max="255">255 &nbsp;
+                Blauw
                 <span
                         id="blueValue">50</span></p>
 
