--- a/index.html
+++ b/index.html
@@ -381,6 +381,21 @@
             </ul>
         </nav>
         </section>
+
+        <section class="Labo 21">
+            <h2>Labo 20</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_21/Antwoorden/index.html">Antwoorden</a>
+                    </li>
+
+                    <li>
+                        <a href="Labo_21/Color%20picker/index.html">Color picker</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
