--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         </section>
 
         <section class="Labo 21">
-            <h2>Labo 20</h2>
+            <h2>Labo 21</h2>
             <nav>
                 <ul>
                     <li>
@@ -392,6 +392,17 @@
 
                     <li>
                         <a href="Labo_21/Color%20picker/index.html">Color picker</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+
+        <section class="Labo 22">
+            <h2>Labo 22</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_22/My%20Internet%20Start%20Page/index.html">My internet start page</a>
                     </li>
                 </ul>
             </nav>
