--- a/index.html
+++ b/index.html
@@ -407,6 +407,17 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="Test">
+            <h2>Test</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Examen_voorbeeld_deel_2/test%20examen/index.html">Tank compare</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
